<resources>
    <string name="app_name">My Calc</string>
    <string name="back">Back</string>
    <string name="eqals">=</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="multi">*</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="div">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="v">v</string>
    <string name="Math_">^</string>
    <string name="x_multi_3">X*3</string>
    <string name="x_multi_2">X*2</string>
    <string name="x_multi_n">X*n</string>
    <string name="strong">!</string>
    <string name="pi">pi</string>
    <string name="tng">tng</string>
    <string name="cos">Cos</string>
    <string name="sin">Sin</string>
    <string name="c">C</string>
    <string name="back_mini">Back</string>
    <string name="multi_mini">*</string>
    <string name="div_mini">/</string>
    <string name="minus_mini">-</string>
    <string name="plus_mini">+</string>
    <string name="back_max">Back</string>
    <string name="Eqals">=</string>
    <string name="Plus_max">+</string>
    <string name="dot_max">.</string>
    <string name="max_0">0</string>
    <string name="minus_max">-</string>
    <string name="max_3">3</string>
    <string name="max_2">2</string>
    <string name="max_1">1</string>
    <string name="multi_max">*</string>
    <string name="max_6">6</string>
    <string name="max_5">5</string>
    <string name="max_4">4</string>
    <string name="max_div">/</string>
    <string name="max_9">9</string>
    <string name="max_8">8</string>
    <string name="max_7">7</string>
    <string name="max_v">v</string>
    <string name="max_x_n">X*N</string>
    <string name="max_x_3">X*3</string>
    <string name="max_x_2">X*2</string>
    <string name="max_log">log</string>
    <string name="max_round">Round</string>
    <string name="max_pi">pi</string>
    <string name="max_tng">tng</string>
    <string name="max_cos">Cos</string>
    <string name="max_sin">Sin</string>
    <string name="max_ac">AC</string>
    <string name="max_c">C</string>
</resources>
